switched favicon from jpeg to ico

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <title>Home | Pete Smith</title>
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon/favicon.jpeg">
-
-    <link rel="stylesheet" href="example.css" media=”screen” />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon/favicon.ico">
+    <link rel="stylesheet" href="style.css" media=”screen” />
     <meta charset="utf-8">
 
 </head>
