--- a/resume.html
+++ b/resume.html
@@ -2,9 +2,9 @@
 <html lang="en-US" dir="ltr">
 
 <head>
-    <title>Coding | Pete Smith</title>
+    <title>Résumé | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-    <meta name="description" content="My Coding Projects">
+    <meta name="description" content="My Résumé">
     <meta name="author" content="Pete Smith">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,8 @@
     <!-- custom stylesheet -->
     <link rel="stylesheet" href="style.css">
 
-
+    <!-- script for LinkedIn badge -->
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 
 <body>
@@ -39,11 +40,11 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="./">Home<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item ml-2">
-                        <a class="nav-link" href="./resume.html">Résumé</a>
+                    <li class="nav-item ml-2 active active-custom">
+                        <a class="nav-link" href="#">Résumé</a>
                     </li>
-                    <li class="nav-item mx-2 active active-custom">
-                        <a class="nav-link" href="#">Coding Projects</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="./coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="./writing.html">Writing Samples</a>
@@ -55,7 +56,10 @@
 
 
     <div class="container">
-
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
+            data-type="VERTICAL" data-vanity="petesmith-umd" data-version="v1"><a
+                class="badge-base__link LI-simple-link"
+                href="https://www.linkedin.com/in/petesmith-umd?trk=profile-badge"></a></div>
 
 
 
