--- a/resume.html
+++ b/resume.html
@@ -14,20 +14,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!-- custom stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <!-- custom stylesheet across subpages -->
+    <link rel="stylesheet" href="shared-styles.css">
 
     <!-- script for LinkedIn badge -->
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow">
+    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top">
         <div class="container">
-            <a class="navbar-brand navbar-brand-custom" href="./">
-                <!-- NEED TO ROUND CORNERS OF LOGO -->
+            <a class="navbar-brand navbar-brand-custom" href="./index.html">
                 <img src="./assets/images/site-logo-1080.jpeg" width="50" height="50"
-                    class="d-inline-block align-center nav-logo" alt="Site logo">Pete Smith
+                    class="d-inline-block align-center nav-logo-custom" alt="Site logo">Pete Smith
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-options"
@@ -38,16 +37,17 @@
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="./">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link nav-home-custom" href="./index.html">Home<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-2 active active-custom">
-                        <a class="nav-link" href="#">Résumé</a>
+                        <a class="nav-link nav-resume-custom" href="#">Résumé</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="./coding.html">Coding Projects</a>
+                        <a class="nav-link nav-coding-custom" href="./coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="./writing.html">Writing Samples</a>
+                        <a class="nav-link nav-writing-custom" href="./writing.html">Writing Samples</a>
                     </li>
                 </ul>
             </div>
@@ -56,21 +56,19 @@
 
 
     <div class="container">
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
-            data-type="VERTICAL" data-vanity="petesmith-umd" data-version="v1"><a
-                class="badge-base__link LI-simple-link"
-                href="https://www.linkedin.com/in/petesmith-umd?trk=profile-badge"></a></div>
+        <div class="body-content-custom">
 
 
 
 
-
-        <hr />
-        <footer class="footer text-muted text-center">
-            <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-            <p>Powered by <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap 4.3.1</a>
-            </p>
-        </footer>
+            <hr />
+            <footer class="footer text-muted text-center">
+                <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
+                <p>Powered by <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
+                        4.3.1</a>
+                </p>
+            </footer>
+        </div>
     </div>
 
 
