Added basic about me and skills on home page, added skeleton of coding projects on coding page
Coding page still needs lots of stylization. Added project descriptions to it.

Added prog. langs, etc. to home page, along with some basic about me facts. Needs pictures, more stylization, etc.

Note to future self: don't forget to fix some of the mobile-responsiveness related stuff.

--- a/resume.html
+++ b/resume.html
@@ -10,15 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
-    <!-- Bootstrap -->
+    <!-- stylesheet for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- custom stylesheet across subpages -->
     <link rel="stylesheet" href="shared-styles.css">
-
-    <!-- script for LinkedIn badge -->
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 
 <body>
@@ -64,7 +61,8 @@
             <hr />
             <footer class="footer text-muted text-center">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p>Powered by <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
+                <p>Hosted by <a href="https://pages.github.com/">GitHub Pages</a> | Powered by <a
+                        href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
                         4.3.1</a>
                 </p>
             </footer>
