--- a/coding.html
+++ b/coding.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
-    <!-- Bootstrap -->
+    <!-- stylesheet for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -54,14 +54,163 @@
 
     <div class="container">
         <div class="body-content-custom">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <h5 class="card-title">This website!</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                        of the card's
+                        content.</p>
+                    <a href="https://github.com/psmit703/personal-website" class="btn btn-primary">GitHub
+                        Repository</a>
+                </div>
+            </div>
 
+            <div class="card card-custom">
+                <div class="card-body">
+                    <h5 class="card-title">Comet InfoSite</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                        of the card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary disabled">Code Currently
+                        Unavailable</a>
+                </div>
+            </div>
+
+            <div class="card card-custom">
+                <div class="card-body">
+                    <h5 class="card-title">Pacman-Ghostbusters</h5>
+                    <p class="card-text">Implemented several functions relating to Bayes' Nets for a Ghostbusters-themed
+                        Pacman game. Functions included
+                        calculating probabilities based on given data, updating belief distributions based on different
+                        conditions, particle
+                        filters, and joint distributions. From UC Berkeley's CS188 Project 4. Written in Python.
+
+                        Completed as part of the curriculum for CMSC421 (Intro to AI) during the Spring 2023 Semester.
+
+                        Per academic integrity guidelines, I cannot post the code publicly. Please send me a message and
+                        I can share the code
+                        with you privately.</p>
+                    <a href="mailto:psmit703@outlook.com" class="btn btn-primary">Contact</a>
+                </div>
+            </div>
+
+            <div class="card card-custom">
+                <div class="card-body">
+                    <h5 class="card-title">Bloom Filter</h5>
+                    <p class="card-text">Implemented insert, rebuild, "hack", checking/search, and hash functions for a
+                        Bloom Filter. Insertion was preceded by a
+                        "hack" function, which was used to simulate a system that keeps track of unsuccessful login
+                        attempts. After some
+                        pre-defined number of calls to hack() for a given username, the username is then passed to the
+                        insert function. Insert()
+                        calls each hash function to determine which indices of the bit array should be set to 1. Upon
+                        successful insertion,
+                        insert() checks whether the false-positive probability is within the pre-defined limits; if it
+                        is not, the rebuild
+                        function is called, finding a new m value (length of bit array), making a new bit array of
+                        length new m, and reinserting
+                        all previously-inserted usernames. Lastly, the checking/search function calls the hash functions
+                        in a similar manner to
+                        insert(), but instead verifying that the respective bits are already set to 1. As with all Bloom
+                        Filters, there is an
+                        unavoidable probability that check() will return a false-positive. Written in Python.
+
+                        Completed as part of the curriculum for CMSC420 (Advanced Data Structures) during the Spring
+                        2023 Semester.
+
+                        Per academic integrity guidelines, I cannot post the code publicly. Please send me a message and
+                        I can share the code
+                        with you privately.</p>
+                    <a href="mailto:psmit703@outlook.com" class="btn btn-primary">Contact</a>
+                </div>
+            </div>
+
+            <div class="card card-custom">
+                <div class="card-body">
+                    <h5 class="card-title">Reinforcement Learning</h5>
+                    <p class="card-text">Implemented reinforcement learning algorithms. Included value iteration,
+                        asynchronous value iteration, prioritized
+                        sweeping value iteration, q-learning, epsilon-greedy action selection, and approximate
+                        q-learning. Also specified
+                        discount, noise, and living reward values along with epsilon and learning rate values to create
+                        effective policies for
+                        several predetermined grid worlds that each utilized different reinforcement learning
+                        algorithms. From UC Berkeley's
+                        CS188 Project 3. Written in Python.
+
+                        Completed as part of the curriculum for CMSC421 (Intro to AI) during the Spring 2023 Semester.
+
+                        Per academic integrity guidelines, I cannot post the code publicly. Please send me a message and
+                        I can share the code
+                        with you privately.</p>
+                    <a href="mailto:psmit703@outlook.com" class="btn btn-primary">Contact</a>
+                </div>
+            </div>
+
+            <div class="card card-custom">
+                <div class="card-body">
+                    <h5 class="card-title">AVL Tree</h5>
+                    <p class="card-text">Implemented insertion, bulk delete, and search functions for an AVL Tree.
+                        Insertion included recursively checking
+                        balance factors and left- or right-rotating where needed. Bulk delete included inorder
+                        traversal, deletion, and
+                        reinsertion per project guidelines. Search combined binary search and recursive backtracking to
+                        return a path-value
+                        tuple. Written in Python.
+
+                        Completed as part of the curriculum for CMSC420 (Advanced Data Structures) during the Spring
+                        2023 Semester.
+
+                        Per academic integrity guidelines, I cannot post the code publicly. Please send me a message and
+                        I can share the code
+                        with you privately.</p>
+                    <a href="mailto:psmit703@outlook.com" class="btn btn-primary">Contact</a>
+                </div>
+            </div>
+
+            <div class="card card-custom">
+                <div class="card-body">
+                    <h5 class="card-title">Adversarial Search</h5>
+                    <p class="card-text">Implemented generalized Minimax and Expectimax algorithms allowing for
+                        arbitrary numbers of adversaries and an arbitrary
+                        search depth. Implemented a second Minimax algorithm incorporating Alpha-Beta Pruning to reduce
+                        computation. Also
+                        implemented reflex- and state-based evaluation functions. From UC Berkeley’s CS188 Project 2.
+                        Written in Python.
+
+                        Completed as part of the curriculum for CMSC421 (Intro to AI) during the Spring 2023 Semester.
+
+                        Per academic integrity guidelines, I cannot post the code publicly. Please send me a message and
+                        I can share the code
+                        with you privately.</p>
+                    <a href="mailto:psmit703@outlook.com" class="btn btn-primary">Contact</a>
+                </div>
+            </div>
+
+            <div class="card card-custom">
+                <div class="card-body">
+                    <h5 class="card-title">"MicrOCaml" Lexer, Parser, and Interpreter</h5>
+                    <p class="card-text">Implemented a Lexer, Parser, and Interpreter for a lightweight version of OCaml
+                        as defined by course
+                        faculty. Also implemented MicrOCaml’s REPL, “mutop”. Written in OCaml.
+
+                        Completed as part of the curriculum for CMSC330 (Organization of Programming Languages) during
+                        the Fall 2022 Semester.
+
+                        Per academic integrity guidelines, I cannot post the code publicly. Please send me a message and
+                        I can share the code
+                        with you privately.</p>
+                    <a href="mailto:psmit703@outlook.com" class="btn btn-primary">Contact</a>
+                </div>
+            </div>
 
 
 
             <hr />
             <footer class="footer text-muted text-center">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p>Powered by <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
+                <p>Hosted by <a href="https://pages.github.com/">GitHub Pages</a> | Powered by <a
+                        href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
                         4.3.1</a>
                 </p>
             </footer>
