--- a/404.html
+++ b/404.html
@@ -2,13 +2,17 @@
 <html lang="en-US" dir="ltr">
 
 <head>
-    <title>Home | Pete Smith</title>
+    <title>Error 404 | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-    <meta name="description" content="A website for all things Pete Smith">
+    <meta name="description" content="Error 404: Page not found">
     <meta name="author" content="Pete Smith">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+
+    <!-- JS script for 404 url display -->
+    <!-- defer so that body will already be parsed when script starts -->
+    <script defer src="./404.js"></script>
 
     <!-- stylesheet for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -55,10 +59,13 @@
     <div class="container">
 
         <div class="body-content-custom">
-            <h1 class="intro-custom text-center" style="width: auto">Error 404</h1>
-            <p class="text-center">The requested page does not exist</p>
-            <p class="text-center">If you believe this is in error, please contact me at <a
-                    href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
+            <h1 class="text-center header-404-custom" style="width: auto">Error 404</h1>
+            <!-- contents of id="404URL" are filled by 404.js -->
+            <p class="text-center">The requested page ( <a id="404URL"></a> ) does not exist</p>
+            <p class="text-center">Please enter a valid URL or use the navbar at the top of the page</p>
+            <p class="text-center">If you believe this is in error, please create an issue in the <a
+                    href="https://github.com/psmit703/personal-website/issues">GitHub repo</a> or contact me directly
+                at <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
 
 
 
