--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
     <div class="container">
 
         <div class="body-content-custom">
-            <h1 class="text-center header-invalid-custom" style="width: auto">Error 404</h1>
+            <h1 class="text-center header-404-custom" style="width: auto">Error 404</h1>
             <!-- contents of id="404URL" are filled by 404.js -->
             <p class="text-center">The requested page ( <a id="404URL"></a> ) does not exist</p>
             <p class="text-center">Please enter a valid URL or use the navbar at the top of the page</p>
