--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                         <a class="nav-link nav-home-custom" href="#">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-2">
-                        <a class="nav-link nav-resume-custom" href="./resume.html">Résumé</a>
+                        <a class="nav-link nav-resume-custom" href="/resume.html">Résumé</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-coding-custom" href="./coding.html">Coding Projects</a>
+                        <a class="nav-link nav-coding-custom" href="/coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-writing-custom" href="./writing.html">Writing Samples</a>
+                        <a class="nav-link nav-writing-custom" href="/writing.html">Writing Samples</a>
                     </li>
                 </ul>
             </div>
