--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top">
         <div class="container">
-            <a class="navbar-brand navbar-brand-custom" href="./index.html">
+            <a class="navbar-brand navbar-brand-custom" href="/">
                 <img src="./assets/images/site-logo-1080.jpeg" width="50" height="50"
                     class="d-inline-block align-center nav-logo-custom" alt="Site logo">Pete Smith
             </a>
@@ -34,17 +34,16 @@
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-home-custom" href="./index.html">Home<span
-                                class="sr-only">(current)</span></a>
+                        <a class="nav-link nav-home-custom" href="/">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-2 active active-custom">
                         <a class="nav-link nav-resume-custom" href="#">Résumé</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-coding-custom" href="./coding.html">Coding Projects</a>
+                        <a class="nav-link nav-coding-custom" href="/coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-writing-custom" href="./writing.html">Writing Samples</a>
+                        <a class="nav-link nav-writing-custom" href="/writing.html">Writing Samples</a>
                     </li>
                 </ul>
             </div>
