One more relative URL fix...
I'm pretty sure this is the last one. Favicon and navbar header.

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Résumé | Pete Smith</title>
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
     <meta name="description" content="My Résumé">
     <meta name="author" content="Pete Smith">
 
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="/">
-                <img src="./assets/images/site-logo-1080.jpeg" width="50" height="50"
+                <img src="/assets/images/site-logo-1080.jpeg" width="50" height="50"
                     class="d-inline-block align-center nav-logo-custom" alt="Site logo">Pete Smith
             </a>
 
