--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Error 404 | Pete Smith</title>
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
     <meta name="description" content="Error 404: Page not found">
     <meta name="author" content="Pete Smith">
 
@@ -27,7 +27,7 @@
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="/">
                 <!-- NEED MORE SIZES FOR LOGO -->
-                <img src="./assets/images/site-logo-1080.jpeg" width="50" height="50"
+                <img src="/assets/images/site-logo-1080.jpeg" width="50" height="50"
                     class="d-inline-block align-center nav-logo-custom" alt="Site logo">Pete Smith
             </a>
 
@@ -38,8 +38,8 @@
 
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-2 active active-custom">
-                        <a class="nav-link nav-home-custom" href="/">Home<span class="sr-only">(current)</span></a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link nav-home-custom" href="/">Home</a>
                     </li>
                     <li class="nav-item ml-2">
                         <a class="nav-link nav-resume-custom" href="/resume.html">Résumé</a>
