--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Home | Pete Smith</title>
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
     <meta name="description" content="A website for all things Pete Smith">
     <meta name="author" content="Pete Smith">
 
@@ -23,7 +23,7 @@
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="#">
                 <!-- NEED MORE SIZES FOR LOGO -->
-                <img src="./assets/images/site-logo-1080.jpeg" width="50" height="50"
+                <img src="/assets/images/site-logo-1080.jpeg" width="50" height="50"
                     class="d-inline-block align-center nav-logo-custom" alt="Site logo">Pete Smith
             </a>
 
