Moved CSS, JS files to assets folder. Started working on README.md

--- a/404.html
+++ b/404.html
@@ -12,14 +12,14 @@
 
     <!-- JS script for 404 url display -->
     <!-- defer so that body will already be parsed when script starts -->
-    <script defer src="/404.js"></script>
+    <script defer src="/assets/js/404.js"></script>
 
     <!-- stylesheet for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- custom stylesheet across subpages -->
-    <link rel="stylesheet" href="/shared-styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
 <body>
@@ -60,18 +60,15 @@
 
         <div class="body-content-custom">
             <h1 class="text-center header-404-custom" style="width: auto">Error 404</h1>
-            <!-- contents of id="404URL" are filled by 404.js -->
+            <!-- href attribute and contents of id="404URL" are filled by 404.js -->
             <p class="text-center">The requested page ( <a id="404URL"></a> ) does not exist</p>
-            <p class="text-center">Please enter a valid URL or use the navbar at the top of the page</p>
+            <p class="text-center">Please enter a valid URL or use the navbar at the top of this page</p>
             <p class="text-center">If you believe this is in error, please create an issue in the <a
-                    href="https://github.com/psmit703/personal-website/issues">GitHub repo</a> or contact me directly
-                at <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-
-
-
-
+                    href="https://github.com/psmit703/personal-website/issues">GitHub repo or email me directly at <a
+                        href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
 
             <hr />
+
             <footer class="footer text-muted text-center">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p>Hosted by <a href="https://pages.github.com/">GitHub Pages</a> | Powered by <a
