Reworked favorite languages, etc. sections stylization on home page
Made stylization for language sections on home page more mobile friendly. Added more bullet points to about me section on home page.

Also added GitHub repo links to the footer of each page.

--- a/index.html
+++ b/index.html
@@ -69,12 +69,19 @@
                     <ul class="quick-facts-custom" title="Some quick facts about me:">
                         <li>I'm a senior at the University of Maryland, College Park</li>
                         <li>I'm pursuing two degrees!
-                            <ul class="degrees-custom">
+                            <ul>
                                 <li>B.S. Computer Science</li>
                                 <li>B.A. American History</li>
                             </ul>
                         </li>
                         <li>I'm minoring in Trumpet Performance!</li>
+                        <li>I have a strong interest in backend development</li>
+                        <li>My general programming focuses:
+                            <ul>
+                                <li>Space- and run-time efficiency</li>
+                                <li>Code maintability (comments, modularity, etc.)</li>
+                            </ul>
+                        </li>
                         <li>I am the (self-proclaimed) best ping pong player in the world (I am willing to defend this
                             title)
                         </li>
@@ -91,82 +98,58 @@
 
             <hr />
 
-            <div class="row langs-custom">
-                <div class="col-sm col-custom col-header-custom">
-                    My favorite languages
+            <h5 class="text-center">My favorite languages</h5>
+            <div class=" row langs-custom">
+                <div class="col-sm col-custom">
+                    <img src="./assets/images/langs/python.svg" height="70px" title="Python" alt="Python logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/python.svg" height="80px" title="Python" alt="Python logo">
-                </div>
-                <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/java.svg" height="80px" title="Java" alt="Java logo">
-                </div>
-                <div class="col-sm col-custom">
-                </div>
-                <div class="col-sm col-custom">
-                </div>
-                <div class="col-sm col-custom">
-                </div>
-                <div class="col-sm col-custom">
-                </div>
-                <div class="col-sm col-custom">
+                    <img src="./assets/images/langs/java.svg" height="70px" title="Java" alt="Java logo">
                 </div>
             </div>
 
             <hr />
 
+            <h5 class="text-center">Other languages I've used</h5>
             <div class="row langs-custom">
-                <div class="col-sm col-custom col-header-custom">
-                    Other languages that I've used
+                <div class="col-sm col-custom">
+                    <img src="./assets/images/langs/c.svg" height="70px" title="C" alt="C logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/c.svg" height="80px" title="C" alt="C logo">
+                    <img src="./assets/images/langs/rust.svg" height="70px" title="Rust" alt="Rust logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/rust.svg" height="80px" title="Rust" alt="Rust logo">
+                    <img src="./assets/images/langs/ruby.svg" height="70px" title="Ruby" alt="Ruby logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/ruby.svg" height="80px" title="Ruby" alt="Ruby logo">
+                    <img src="./assets/images/langs/ocaml.svg" height="70px" title="OCaml" alt="OCaml logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/ocaml.svg" height="80px" title="OCaml" alt="OCaml logo">
+                    <img src="./assets/images/langs/html.svg" height="70px" title="HTML5" alt="HTML5 logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/html.svg" height="80px" title="HTML5" alt="HTML5 logo">
+                    <img src="./assets/images/langs/css.svg" height="70px" title="CSS3" alt="CSS3 logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/css.svg" height="80px" title="CSS3" alt="CSS3 logo">
-                </div>
-                <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/javascript.svg" height="80px" title="JavaScript"
+                    <img src="./assets/images/langs/javascript.svg" height="70px" title="JavaScript"
                         alt="JavaScript logo">
                 </div>
             </div>
 
             <hr />
 
+            <h5 class="text-center">Frameworks I've used</h5>
             <div class="row langs-custom">
-                <div class="col-sm col-custom col-header-custom ">
-                    Frameworks that I've used
-                </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/frameworks/bootstrap.svg" height="80px" title="Bootstrap"
+                    <img src="./assets/images/frameworks/bootstrap.svg" height="70px" title="Bootstrap"
                         alt="Bootstrap logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/frameworks/jquery.svg" height="80px" title="jQuery" alt="jQuery logo">
+                    <img src="./assets/images/frameworks/jquery.svg" height="70px" title="jQuery" alt="jQuery logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/frameworks/plotly.svg" height="80px" title="Plotly.js"
+                    <img src="./assets/images/frameworks/plotly.svg" height="70px" title="Plotly.js"
                         alt="Plotly.js logo">
-                </div>
-                <div class="col-sm col-custom">
-                </div>
-                <div class="col-sm col-custom">
-                </div>
-                <div class="col-sm col-custom">
-                </div>
-                <div class="col-sm col-custom">
                 </div>
             </div>
 
@@ -219,6 +202,7 @@
                         href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
                         4.3.1</a>
                 </p>
+                <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a></p>
             </footer>
         </div>
     </div>
