--- a/404.html
+++ b/404.html
@@ -75,6 +75,7 @@
                         href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
                         4.3.1</a>
                 </p>
+                <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a></p>
             </footer>
         </div>
     </div>
