--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
 
         <div class="body-content-custom">
-            <h1 class="intro-custom">Hi! I'm Pete Smith,</h1>
+            <h1 class="intro-custom">Hi! I'm Pete Smith</h1>
 
 
             <div class="row langs-custom">
