--- a/404.html
+++ b/404.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Error 404: Page not found">
     <meta name="author" content="Pete Smith">
 
+    <meta name="robots" content="noindex, nofollow">
+    <link rel="canonical" href="https://www.psmit.dev/404.html">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
@@ -63,9 +66,9 @@
             <!-- href attribute and contents of id="404URL" are filled by 404.js -->
             <p class="text-center">The requested page ( <a id="404URL"></a> ) does not exist</p>
             <p class="text-center">Please enter a valid URL or use the navbar at the top of this page</p>
-            <p class="text-center">If you believe this is in error, please create an issue in the <a
-                    href="https://github.com/psmit703/personal-website/issues">GitHub repo or email me directly at <a
-                        href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
+            <p class="text-center">If you believe this is in error, please <a
+                    href="https://github.com/psmit703/personal-website/issues">create an issue in the GitHub repo</a> or
+                email me directly at <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
 
             <hr />
 
