--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="description" content="A website for all things Pete Smith">
     <meta name="author" content="Pete Smith">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+    <link rel="canonical" href="https://www.psmit.dev/">
+
+    <meta name=" viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
     <!-- stylesheet for Bootstrap -->
