--- a/writing.html
+++ b/writing.html
@@ -7,6 +7,9 @@
     <meta name="description" content="My Writing Samples">
     <meta name="author" content="Pete Smith">
 
+    <meta name="robots" content="noindex, nofollow">
+    <link rel="canonical" href="https://www.psmit.dev/writing.html">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
