Moved OCaml to favorite languages section
Also some minor stylization changes, and changed relative directories of language logo SVGs to guarantee they are from the root directory

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <h1 class="intro-custom">Hi! I'm Pete Smith</h1>
 
 
-            <div class="row langs-custom">
-                <div class="col-sm col-custom">
+            <div class="row">
+                <div class="col-md">
 
                 </div>
                 <div class="col-md">
@@ -104,10 +104,13 @@
             <h5 class="text-center">My favorite languages</h5>
             <div class=" row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/python.svg" height="70px" title="Python" alt="Python logo">
+                    <img src="/assets/images/langs/python.svg" height="70px" title="Python" alt="Python logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/java.svg" height="70px" title="Java" alt="Java logo">
+                    <img src="/assets/images/langs/java.svg" height="70px" title="Java" alt="Java logo">
+                </div>
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/langs/ocaml.svg" height="70px" title="OCaml" alt="OCaml logo">
                 </div>
             </div>
 
@@ -116,25 +119,22 @@
             <h5 class="text-center">Other languages I've used</h5>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/c.svg" height="70px" title="C" alt="C logo">
+                    <img src="/assets/images/langs/c.svg" height="70px" title="C" alt="C logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/rust.svg" height="70px" title="Rust" alt="Rust logo">
+                    <img src="/assets/images/langs/rust.svg" height="70px" title="Rust" alt="Rust logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/ruby.svg" height="70px" title="Ruby" alt="Ruby logo">
+                    <img src="/assets/images/langs/ruby.svg" height="70px" title="Ruby" alt="Ruby logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/ocaml.svg" height="70px" title="OCaml" alt="OCaml logo">
+                    <img src="/assets/images/langs/html.svg" height="70px" title="HTML5" alt="HTML5 logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/html.svg" height="70px" title="HTML5" alt="HTML5 logo">
+                    <img src="/assets/images/langs/css.svg" height="70px" title="CSS3" alt="CSS3 logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/css.svg" height="70px" title="CSS3" alt="CSS3 logo">
-                </div>
-                <div class="col-sm col-custom">
-                    <img src="./assets/images/langs/javascript.svg" height="70px" title="JavaScript"
+                    <img src="/assets/images/langs/javascript.svg" height="70px" title="JavaScript"
                         alt="JavaScript logo">
                 </div>
             </div>
@@ -144,14 +144,14 @@
             <h5 class="text-center">Frameworks I've used</h5>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/frameworks/bootstrap.svg" height="70px" title="Bootstrap"
+                    <img src="/assets/images/frameworks/bootstrap.svg" height="70px" title="Bootstrap"
                         alt="Bootstrap logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/frameworks/jquery.svg" height="70px" title="jQuery" alt="jQuery logo">
+                    <img src="/assets/images/frameworks/jquery.svg" height="70px" title="jQuery" alt="jQuery logo">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="./assets/images/frameworks/plotly.svg" height="70px" title="Plotly.js"
+                    <img src="/assets/images/frameworks/plotly.svg" height="70px" title="Plotly.js"
                         alt="Plotly.js logo">
                 </div>
             </div>
