--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
     <div class="container">
 
         <div class="body-content-custom">
+            <h1 class="intro-custom">This site is under active development! Thank you for your patience</h1>
+
+            <hr />
+
             <h1 class="intro-custom">Hi! I'm Pete Smith</h1>
 
 
