--- a/resume.html
+++ b/resume.html
@@ -56,8 +56,49 @@
 
     <div class="container">
         <div class="body-content-custom">
+            <div id="technical-resume-custom"></div>
+            <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+            <script type="text/javascript">
+                document.addEventListener("adobe_dc_view_sdk.ready", function () {
+                    var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "technical-resume-custom" });
+                    adobeDCView.previewFile(
+                        {
+                            content: { location: { url: "INSERT PDF LINK" } },
+                            metaData: { fileName: "INSERT PDF NAME", hasReadOnlyAccess: true }
+                        },
+                        {
+                            embedMode: "SIZED_CONTAINER",
+                            showFullScreen: true,
+                            showDownloadPDF: true,
+                            showPrintPDF: true
+                        }
 
+                    );
+                });
+            </script>
 
+            <hr />
+
+            <div id="humanities-resume-custom"></div>
+            <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+            <script type="text/javascript">
+                document.addEventListener("adobe_dc_view_sdk.ready", function () {
+                    var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "humanities-resume-custom" });
+                    adobeDCView.previewFile(
+                        {
+                            content: { location: { url: "INSERT PDF LINK" } },
+                            metaData: { fileName: "INSERT PDF NAME", hasReadOnlyAccess: true }
+                        },
+                        {
+                            embedMode: "SIZED_CONTAINER",
+                            showFullScreen: true,
+                            showDownloadPDF: true,
+                            showPrintPDF: true
+                        }
+
+                    );
+                });
+            </script>
 
 
             <hr />
