--- a/index.html
+++ b/index.html
@@ -205,11 +205,8 @@
             <hr />
             <footer class="footer text-muted text-center">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p>Hosted by <a href="https://pages.github.com/">GitHub Pages</a> | Powered by <a
-                        href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
-                        4.3.1</a>
-                </p>
-                <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a></p>
+                <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
+                        href="/privacy.html">Privacy Policy</a></p>
             </footer>
         </div>
     </div>
