--- a/resume.html
+++ b/resume.html
@@ -63,8 +63,8 @@
                     var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "technical-resume-custom" });
                     adobeDCView.previewFile(
                         {
-                            content: { location: { url: "INSERT PDF LINK" } },
-                            metaData: { fileName: "INSERT PDF NAME", hasReadOnlyAccess: true }
+                            content: { location: { url: "/assets/resumes/Pete_Smith_Resume_(Technical).pdf" } },
+                            metaData: { fileName: "Pete Smith Résumé (Technical)", hasReadOnlyAccess: true }
                         },
                         {
                             embedMode: "SIZED_CONTAINER",
@@ -86,8 +86,8 @@
                     var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "humanities-resume-custom" });
                     adobeDCView.previewFile(
                         {
-                            content: { location: { url: "INSERT PDF LINK" } },
-                            metaData: { fileName: "INSERT PDF NAME", hasReadOnlyAccess: true }
+                            content: { location: { url: "/assets/resumes/Pete_Smith_Resume_(Humanities).pdf" } },
+                            metaData: { fileName: "Pete Smith Résumé (Humanities)", hasReadOnlyAccess: true }
                         },
                         {
                             embedMode: "SIZED_CONTAINER",
