Testing stylization for resumes...
Adobe's PDF Embed API *requires* an API key which has to be used from the registered site. Soooo that means I have to upload it to the live site. Every time. So there's probably going to be a lot of commits coming up because Adobe really didn't think this through.

--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
 
 
     <div class="container">
-        <div class="body-content-custom">
+        <div class="body-content-custom" style="height: 360px; width: 500px;">
             <div id="technical-resume-custom"></div>
             <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
             <script type="text/javascript">
@@ -79,7 +79,7 @@
 
             <hr />
 
-            <div id="humanities-resume-custom"></div>
+            <div id="humanities-resume-custom" style="height: 360px; width: 500px;"></div>
             <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
             <script type="text/javascript">
                 document.addEventListener("adobe_dc_view_sdk.ready", function () {
