--- a/resume.html
+++ b/resume.html
@@ -55,8 +55,8 @@
 
 
     <div class="container">
-        <div class="body-content-custom" style="height: 360px; width: 500px;">
-            <div id="technical-resume-custom"></div>
+        <div class="body-content-custom">
+            <div id="technical-resume-custom" style="height: 360px; width: 500px; margin: auto;"></div>
             <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
             <script type="text/javascript">
                 document.addEventListener("adobe_dc_view_sdk.ready", function () {
