--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
 
     <div class="container">
         <div class="body-content-custom">
-            <div id="technical-resume-custom" style="height: 360px; width: 500px; margin: auto;"></div>
+            <div id="technical-resume-custom" style="height: 660px; width: 510px; margin: auto;"></div>
             <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
             <script type="text/javascript">
                 document.addEventListener("adobe_dc_view_sdk.ready", function () {
@@ -79,7 +79,7 @@
 
             <hr />
 
-            <div id="humanities-resume-custom" style="height: 360px; width: 500px;"></div>
+            <div id="humanities-resume-custom" style="height: 360px; width: 500px; margin: auto"></div>
             <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
             <script type="text/javascript">
                 document.addEventListener("adobe_dc_view_sdk.ready", function () {
