--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,8 @@
 
     <div class="container">
         <div class="body-content-custom">
-            <div id="technical-resume-custom" style="height: 990px; width: 765px; margin: auto;"></div>
+
+            <div id="technical-resume-custom" class="h-75 w-50" style="margin: auto;"></div>
             <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
             <script type="text/javascript">
                 document.addEventListener("adobe_dc_view_sdk.ready", function () {
@@ -76,10 +77,11 @@
                     );
                 });
             </script>
+            <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Technical Resume Direct Download</a>
 
             <hr />
 
-            <div id="humanities-resume-custom" style="height: 660px; width: 510px; margin: auto"></div>
+            <div id="humanities-resume-custom" style="height: 660px; width: 510px; margin: auto;"></div>
             <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
             <script type="text/javascript">
                 document.addEventListener("adobe_dc_view_sdk.ready", function () {
@@ -99,7 +101,7 @@
                     );
                 });
             </script>
-
+            <a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">Humanities Resume Direct Download</a>
 
             <hr />
             <footer class="footer text-muted text-center">
