--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="body-content-custom">
 
-            <div id="technical-resume-custom" class="h-75 w-50" style="margin: auto;"></div>
+            <div id="technical-resume-custom" style="height: 1000%; margin: auto;"></div>
             <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
             <script type="text/javascript">
                 document.addEventListener("adobe_dc_view_sdk.ready", function () {
