--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,8 @@
                                 metaData: { fileName: "Pete Smith Résumé (Technical)", hasReadOnlyAccess: true }
                             },
                             {
-                                embedMode: "SIZED_CONTAINER",
+                                embedMode: "IN_LINE",
+                                showFullScreen: true,
                                 showDownloadPDF: true,
                                 showPrintPDF: true
                             }
