--- a/resume.html
+++ b/resume.html
@@ -58,6 +58,11 @@
         <div class="body-content-custom">
 
             <div class="card mx-auto">
+                <h4 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">
+                    Technical Résumé |
+                    <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
+                        Download</a>
+                </h4>
                 <div id="technical-resume-custom" style="height: 660px; margin: auto;"></div>
                 <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
                 <script type="text/javascript">
@@ -78,13 +83,17 @@
                         );
                     });
                 </script>
-                <p class="text-center"><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Technical Résumé
-                        Direct Download</a></p>
+                <div style="height: 45px; margin: 8px 0 0;"></div>
             </div>
 
             <hr />
 
             <div class="card mx-auto">
+                <h4 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">Humanities
+                    Résumé |
+                    <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
+                        Download</a>
+                </h4>
                 <div id="humanities-resume-custom" style="height: 660px; margin: auto;"></div>
                 <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
                 <script type="text/javascript">
@@ -105,8 +114,7 @@
                         );
                     });
                 </script>
-                <p class="text-center"><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">Humanities Résumé
-                        Direct Download</a></p>
+                <div style="height: 45px; margin: 8px 0 0;"></div>
             </div>
 
             <hr />
