--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,6 @@
                         );
                     });
                 </script>
-                <div style="height: 45px; margin: 8px 0 0;"></div>
             </div>
 
             <hr />
@@ -105,7 +104,7 @@
                                 metaData: { fileName: "Pete Smith Résumé (Humanities)", hasReadOnlyAccess: true }
                             },
                             {
-                                embedMode: "SIZED_CONTAINER",
+                                embedMode: "IN_LINE",
                                 showFullScreen: true,
                                 showDownloadPDF: true,
                                 showPrintPDF: true
