--- a/resume.html
+++ b/resume.html
@@ -83,6 +83,7 @@
                         );
                     });
                 </script>
+                <div style="height: 45px; margin: 8px 0 0;"></div>
             </div>
 
             <hr />
