Uploaded images for index.html, made script to randomly choose image
Added jQuery as well to make the script

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <!-- custom stylesheet across subpages -->
     <link rel="stylesheet" href="/assets/css/styles.css">
+
+    <!-- random image script (needs jquery) -->
+    <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
+    <script defer src="/assets/js/random-image.js"></script>
 </head>
 
 <body>
@@ -67,7 +71,7 @@
 
             <div class="row">
                 <div class="col-md">
-
+                    <img id="random-image" style="object-fit: cover; height: 500px; width: 500px;">
                 </div>
                 <div class="col-md">
                     <p class="quick-facts-custom">
