--- a/coding.html
+++ b/coding.html
@@ -56,7 +56,7 @@
 
     <div class="container">
         <div class="body-content-custom">
-
+            <h1 class="text-center">Coming soon!</h1>
 
 
 
