--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         Some quick facts about me:
 
                     <ul class="quick-facts-custom" title="Some quick facts about me:">
-                        <li>I'm an aspiring software engineer based in the Washington, D.C. Area</li>
+                        <li>I'm an aspiring software engineer based in the Washington, DC area</li>
                         <li>I'm a senior at the University of Maryland, College Park</li>
                         <li>I'm pursuing two degrees!
                             <ul>
