--- a/privacy.html
+++ b/privacy.html
@@ -58,7 +58,7 @@
     <div class="container">
 
         <div class="body-content-custom">
-
+            <h1 class="text-center">Coming soon!</h1>
 
 
 
